change from github

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>SuperNinja</h1>
-    <a href="contact.html">Contact Page</a>
+    <a href="contact.html">Contact Pagessssss</a>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sint fuga eos cum quo sequi provident voluptatem, nemo officiis explicabo voluptatibus quam architecto nam ducimus reprehenderit. Quia rem eveniet nemo?</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sint fuga eos cum quo sequi provident voluptatem, nemo officiis explicabo voluptatibus quam architecto nam ducimus reprehenderit. Quia rem eveniet nemo?</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae sint fuga eos cum quo sequi provident voluptatem, nemo officiis explicabo voluptatibus quam architecto nam ducimus reprehenderit. Quia rem eveniet nemo?</p>
